Archive2/90/b567a3c765f0c7/output
main.cpp:13:13: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
    if (str = "good") {
        ~~~~^~~~~~~~
main.cpp:13:13: note: place parentheses around the assignment to silence this warning
    if (str = "good") {
            ^
        (           )
main.cpp:13:13: note: use '==' to turn this assignment into an equality comparison
    if (str = "good") {
            ^
            ==
main.cpp:13:9: error: value of type 'std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >' is not contextually convertible to 'bool'
    if (str = "good") {
        ^~~~~~~~~~~~
main.cpp:16:18: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
    else if (str = "bad") {
             ~~~~^~~~~~~
main.cpp:16:18: note: place parentheses around the assignment to silence this warning
    else if (str = "bad") {
                 ^
             (          )
main.cpp:16:18: note: use '==' to turn this assignment into an equality comparison
    else if (str = "bad") {
                 ^
                 ==
main.cpp:16:14: error: value of type 'std::__1::basic_string<char, std::__1::char_traits<char>, std::__1::allocator<char> >' is not contextually convertible to 'bool'
    else if (str = "bad") {
             ^~~~~~~~~~~
2 warnings and 2 errors generated.
